--- a/version_3/src/main/webapp/WEB-INF/templates/create.html
+++ b/version_3/src/main/webapp/WEB-INF/templates/create.html
@@ -41,8 +41,8 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">Home</a></li>
-                        <li><a href="create">Create</a></li>
+                        <li><a href="home">Home</a></li>
+                        <li class="active"><a href="#">Create</a></li>
                         <li><a href="#contact">Contact</a></li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
@@ -62,14 +62,10 @@
         </nav>
 
         <div class="container theme-showcase" role="main">
-            <table>
-                <tr data-th-each="ballot : ${ballots}">
-                    <td>
-                        <span data-th-text="${ballot.question+':'}" />
-                        <span data-th-each="answer : ${ballot.answers}" data-th-text="${answer}" />
-                    </td>
-                </tr>
-            </table>
+            <div class="jumbotron">
+                <h1>Create Ballot Form</h1>
+                <p>We would show the form for creating a new ballot</p>
+            </div>
         </div>
 
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
