--- a/version_3/src/main/webapp/WEB-INF/templates/create.html
+++ b/version_3/src/main/webapp/WEB-INF/templates/create.html
@@ -2,7 +2,7 @@
 
 <html xmlns:th="http://www.thymeleaf.org">
     <head>
-        <title>Tabella Version Two</title>
+        <title>Tabella Version Three</title>
         <meta charset="utf-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
