--- a/version_5/src/main/webapp/css/theme.css
+++ b/version_5/src/main/webapp/css/theme.css
@@ -16,3 +16,12 @@ body {
 .theme-showcase .navbar .container {
   width: auto;
 }
+
+.ballotTitle {
+    font-size: bigger;
+    font-weight: bold;
+}
+
+.ballotAnswers {
+    margin-left: 20px;
+}
