--- a/version_8/src/main/resources/templates/home.html
+++ b/version_8/src/main/resources/templates/home.html
@@ -1,32 +1,160 @@
 <!DOCTYPE html>
+<!--
+This is a starter template page. Use this page to start your new project from
+scratch. This page gets rid of all links and provides the needed markup only.
+-->
 <html xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-    <title>Tabella Version Six</title>
-
     <!--/*/ <th:block th:include="fragments/headerinc :: head"></th:block> /*/-->
 </head>
+<!--
+BODY TAG OPTIONS:
+=================
+Apply one or more of the following classes to get the
+desired effect
+| SKINS         | skin-blue                               |
+|               | skin-black                              |
+|               | skin-purple                             |
+|               | skin-yellow                             |
+|               | skin-red                                |
+|               | skin-green                              |
+|LAYOUT OPTIONS | fixed                                   |
+|               | layout-boxed                            |
+|               | layout-top-nav                          |
+|               | sidebar-collapse                        |
+|               | sidebar-mini                            |
+-->
+<body class="hold-transition skin-blue sidebar-mini">
+<div class="wrapper">
 
-<body role="document">
-<!--/*/ <th:block th:include="fragments/header :: header"></th:block> /*/-->
+    <!-- Main Header -->
+    <!--/*/ <th:block th:include="fragments/MasterPage :: header"></th:block> /*/-->
 
-<div class="container theme-showcase" role="main">
-    You are logged in as: <span sec:authentication="principal.username">Who</span>
-    <div class="well" data-th-each="ballot : ${ballots}">
-        <form action="#" data-th-action="@{/ballot/answer}" method="POST" >
-            <input type="hidden" name="id" data-th-value="${ballot.id}" value="0"/>
-            <label class="ballotTitle" data-th-text="${ballot.id}+' : '+${ballot.question}" /><br/>
-            <div class="ballotAnswers">
-                <div class="radio" data-th-each="answer,status : ${ballot.answers}">
-                    <label><input type="radio" name="answerIndex" data-th-value="${status.index}" data-th-text="${answer}" >option</input></label>
-                </div>
-            </div>
-            <button type="submit" class="btn btn-default btn-success">Confirm</button>
-        </form>
+    <!-- Left side column. contains the logo and sidebar -->
+    <!--/*/ <th:block th:include="fragments/MasterPage :: sidebar"></th:block> /*/-->
+
+    <!-- Content Wrapper. Contains page content -->
+    <div class="content-wrapper">
+        <!-- Content Header (Page header) -->
+        <section class="content-header">
+            <h1>
+                Version 8
+                <small>You are logged in as: <span sec:authentication="principal.username">Who</span></small>
+            </h1>
+            <ol class="breadcrumb">
+                <li><a href="#"><i class="fa fa-dashboard"></i> Level</a></li>
+                <li class="active">Here</li>
+            </ol>
+        </section>
+
+        <!-- Main content -->
+        <section class="content">
+
+            <!-- Your Page Content Here -->
+            <div class="box box-solid box-info" data-th-each="ballot : ${ballots}">
+                <div class="box-header">
+                    <h3 class="box-title" data-th-text="${ballot.id}+' : '+${ballot.question}">Question</h3>
+                </div><!-- /.box-header -->
+                <div class="box-body">
+                    <form action="#" data-th-action="@{/ballot/answer}" method="POST" >
+                        <input type="hidden" name="id" data-th-value="${ballot.id}" value="0"/>
+                        <div class="ballotAnswers">
+                            <div class="radio" data-th-each="answer,status : ${ballot.answers}">
+                                <label><input type="radio" name="answerIndex" data-th-value="${status.index}" data-th-text="${answer}" >option</input></label>
+                            </div>
+                        </div>
+                        <button type="submit" class="btn btn-default btn-success">Confirm</button>
+                    </form>
+                </div><!-- /.box-body -->
+            </div><!-- /.box -->
+
+        </section>
+        <!-- /.content -->
     </div>
-</div>
+    <!-- /.content-wrapper -->
 
-<!--/*/ <th:block th:include="fragments/footerinc :: footer"></th:block> /*/-->
+    <!-- Main Footer -->
+    <!--/*/ <th:block th:include="fragments/MasterPage :: footer"></th:block> /*/-->
+
+    <!-- Control Sidebar -->
+    <aside class="control-sidebar control-sidebar-dark">
+        <!-- Create the tabs -->
+        <ul class="nav nav-tabs nav-justified control-sidebar-tabs">
+            <li class="active"><a href="#control-sidebar-home-tab" data-toggle="tab"><i class="fa fa-home"></i></a></li>
+            <li><a href="#control-sidebar-settings-tab" data-toggle="tab"><i class="fa fa-gears"></i></a></li>
+        </ul>
+        <!-- Tab panes -->
+        <div class="tab-content">
+            <!-- Home tab content -->
+            <div class="tab-pane active" id="control-sidebar-home-tab">
+                <h3 class="control-sidebar-heading">Recent Activity</h3>
+                <ul class="control-sidebar-menu">
+                    <li>
+                        <a href="javascript::;">
+                            <i class="menu-icon fa fa-birthday-cake bg-red"></i>
+
+                            <div class="menu-info">
+                                <h4 class="control-sidebar-subheading">Langdon's Birthday</h4>
+
+                                <p>Will be 23 on April 24th</p>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+                <!-- /.control-sidebar-menu -->
+
+                <h3 class="control-sidebar-heading">Tasks Progress</h3>
+                <ul class="control-sidebar-menu">
+                    <li>
+                        <a href="javascript::;">
+                            <h4 class="control-sidebar-subheading">
+                                Custom Template Design
+                                <span class="label label-danger pull-right">70%</span>
+                            </h4>
+
+                            <div class="progress progress-xxs">
+                                <div class="progress-bar progress-bar-danger" style="width: 70%"></div>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+                <!-- /.control-sidebar-menu -->
+
+            </div>
+            <!-- /.tab-pane -->
+            <!-- Stats tab content -->
+            <div class="tab-pane" id="control-sidebar-stats-tab">Stats Tab Content</div>
+            <!-- /.tab-pane -->
+            <!-- Settings tab content -->
+            <div class="tab-pane" id="control-sidebar-settings-tab">
+                <form method="post">
+                    <h3 class="control-sidebar-heading">General Settings</h3>
+
+                    <div class="form-group">
+                        <label class="control-sidebar-subheading">
+                            Report panel usage
+                            <input type="checkbox" class="pull-right" checked="true"/>
+                        </label>
+
+                        <p>
+                            Some information about this general settings option
+                        </p>
+                    </div>
+                    <!-- /.form-group -->
+                </form>
+            </div>
+            <!-- /.tab-pane -->
+        </div>
+    </aside>
+    <!-- /.control-sidebar -->
+    <!-- Add the sidebar's background. This div must be placed
+         immediately after the control sidebar -->
+    <div class="control-sidebar-bg"></div>
+</div>
+<!-- ./wrapper -->
+
+<!-- REQUIRED JS SCRIPTS -->
+<!--/*/ <th:block th:include="fragments/MasterPage :: scripts"></th:block> /*/-->
 
 </body>
-
 </html>
