Added some blocks to the top of home for a dashboard

--- a/version_8/src/main/resources/templates/home.html
+++ b/version_8/src/main/resources/templates/home.html
@@ -51,6 +51,68 @@ desired effect
         <section class="content">
 
             <!-- Your Page Content Here -->
+            <div class="row">
+                <div class="col-lg-3 col-xs-6">
+                    <!-- small box -->
+                    <div class="small-box bg-aqua">
+                        <div class="inner">
+                            <h3>150</h3>
+
+                            <p>Unanswered</p>
+                        </div>
+                        <div class="icon">
+                            <i class="ion ion-ios-list-outline"></i>
+                        </div>
+                        <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+                    </div>
+                </div>
+                <!-- ./col -->
+                <div class="col-lg-3 col-xs-6">
+                    <!-- small box -->
+                    <div class="small-box bg-green">
+                        <div class="inner">
+                            <h3>27</h3>
+
+                            <p>Answered</p>
+                        </div>
+                        <div class="icon">
+                            <i class="ion ion-compose"></i>
+                        </div>
+                        <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+                    </div>
+                </div>
+                <!-- ./col -->
+                <div class="col-lg-3 col-xs-6">
+                    <!-- small box -->
+                    <div class="small-box bg-yellow">
+                        <div class="inner">
+                            <h3>44</h3>
+
+                            <p>Asked</p>
+                        </div>
+                        <div class="icon">
+                            <i class="ion ion-help"></i>
+                        </div>
+                        <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+                    </div>
+                </div>
+                <!-- ./col -->
+                <div class="col-lg-3 col-xs-6">
+                    <!-- small box -->
+                    <div class="small-box bg-red">
+                        <div class="inner">
+                            <h3>10</h3>
+
+                            <p>Have been answered</p>
+                        </div>
+                        <div class="icon">
+                            <i class="ion ion-pie-graph"></i>
+                        </div>
+                        <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+                    </div>
+                </div>
+                <!-- ./col -->
+            </div>
             <div class="box box-solid box-info" data-th-each="ballot : ${ballots}">
                 <div class="box-header">
                     <h3 class="box-title" data-th-text="${ballot.id}+' : '+${ballot.question}">Question</h3>
