Changed some of the box text

--- a/version_8/src/main/resources/templates/home.html
+++ b/version_8/src/main/resources/templates/home.html
@@ -73,7 +73,7 @@ desired effect
                         <div class="inner">
                             <h3>27</h3>
 
-                            <p>Answered</p>
+                            <p>You have answered</p>
                         </div>
                         <div class="icon">
                             <i class="ion ion-compose"></i>
