--- a/version_8/src/main/resources/static/css/tabella.css
+++ b/version_8/src/main/resources/static/css/tabella.css
@@ -1,27 +1,7 @@
-body {
-  padding-top: 70px;
-  padding-bottom: 30px;
-}
-
-.theme-dropdown .dropdown-menu {
-  position: static;
-  display: block;
-  margin-bottom: 20px;
-}
-
-.theme-showcase > p > .btn {
-  margin: 5px 0;
-}
-
-.theme-showcase .navbar .container {
-  width: auto;
-}
-
-.ballotTitle {
-    font-size: bigger;
-    font-weight: bold;
+.noPaddingTop {
+    padding-top: 0px;
 }
 
 .ballotAnswers {
-    margin-left: 20px;
+    padding-left: 10px;
 }
