--- a/version_8/src/main/resources/templates/login.html
+++ b/version_8/src/main/resources/templates/login.html
@@ -22,7 +22,7 @@
     <form role="form" action="/login" method="post">
       <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
       <div class="form-group has-feedback">
-        <input type="email" class="form-control" placeholder="Email" name="email"/>
+        <input type="email" class="form-control" placeholder="Email" name="email" autofocus="true"/>
         <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
       </div>
       <div class="form-group has-feedback">
