Added support for the tiles at the top of the home page

--- a/version_9/src/main/resources/templates/home.html
+++ b/version_9/src/main/resources/templates/home.html
@@ -56,7 +56,7 @@ desired effect
                     <!-- small box -->
                     <div class="small-box bg-aqua">
                         <div class="inner">
-                            <h3>150</h3>
+                            <h3 data-th-text="${unanswered}">150</h3>
 
                             <p>Unanswered</p>
                         </div>
@@ -71,7 +71,7 @@ desired effect
                     <!-- small box -->
                     <div class="small-box bg-green">
                         <div class="inner">
-                            <h3>27</h3>
+                            <h3  data-th-text="${userAnswered}">27</h3>
 
                             <p>You have answered</p>
                         </div>
@@ -86,7 +86,7 @@ desired effect
                     <!-- small box -->
                     <div class="small-box bg-yellow">
                         <div class="inner">
-                            <h3>44</h3>
+                            <h3 data-th-text="${asked}">44</h3>
 
                             <p>Asked</p>
                         </div>
@@ -101,7 +101,7 @@ desired effect
                     <!-- small box -->
                     <div class="small-box bg-red">
                         <div class="inner">
-                            <h3>10</h3>
+                            <h3 data-th-text="${answered}">10</h3>
 
                             <p>Have been answered</p>
                         </div>
