--- a/version_9/src/main/resources/templates/answeredBallots.html
+++ b/version_9/src/main/resources/templates/answeredBallots.html
@@ -50,85 +50,26 @@ desired effect
         <!-- Main content -->
         <section class="content">
 
-            <!-- Your Page Content Here -->
-            <div class="row">
-                <div class="col-lg-3 col-xs-6">
-                    <!-- small box -->
-                    <div class="small-box bg-aqua">
-                        <div class="inner">
-                            <h3 data-th-text="${unanswered}">150</h3>
-
-                            <p>Unanswered</p>
-                        </div>
-                        <div class="icon">
-                            <i class="ion ion-ios-list-outline"></i>
-                        </div>
-                        <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
-                    </div>
-                </div>
-                <!-- ./col -->
-                <div class="col-lg-3 col-xs-6">
-                    <!-- small box -->
-                    <div class="small-box bg-green">
-                        <div class="inner">
-                            <h3  data-th-text="${userAnswered}">27</h3>
-
-                            <p>You have answered</p>
-                        </div>
-                        <div class="icon">
-                            <i class="ion ion-compose"></i>
-                        </div>
-                        <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
-                    </div>
-                </div>
-                <!-- ./col -->
-                <div class="col-lg-3 col-xs-6">
-                    <!-- small box -->
-                    <div class="small-box bg-yellow">
-                        <div class="inner">
-                            <h3 data-th-text="${asked}">44</h3>
-
-                            <p>Asked</p>
-                        </div>
-                        <div class="icon">
-                            <i class="ion ion-help"></i>
-                        </div>
-                        <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
-                    </div>
-                </div>
-                <!-- ./col -->
-                <div class="col-lg-3 col-xs-6">
-                    <!-- small box -->
-                    <div class="small-box bg-red">
-                        <div class="inner">
-                            <h3 data-th-text="${answered}">10</h3>
-
-                            <p>Have been answered</p>
-                        </div>
-                        <div class="icon">
-                            <i class="ion ion-pie-graph"></i>
-                        </div>
-                        <a href="/ballot/results" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
-                    </div>
-                </div>
-                <!-- ./col -->
-            </div>
-            <form action="#" data-th-action="@{/ballot/answer}" method="POST" >
-                <div class="box box-solid box-default" data-th-each="ballot : ${ballots}">
-                    <div class="box-header bg-purple">
-                        <h3 class="box-title" data-th-text="${ballot.id}+' : '+${ballot.question}">Question</h3>
-                    </div><!-- /.box-header -->
-                    <div class="box-body noPaddingTop">
-                            <input type="hidden" name="id" data-th-value="${ballot.id}" value="0"/>
-                            <div class="ballotAnswers">
-                                <div class="radio" data-th-each="answer,status : ${ballot.answers}">
-                                    <label><input type="radio" name="answerIndex" data-th-value="${status.index}" data-th-text="${answer}" >option</input></label>
-                                </div>
+            <div class="box box-solid box-default" data-th-each="entry : ${ballots}">
+                <div class="box-header bg-purple">
+                    <h3 class="box-title" data-th-text="${entry.key.id}+' : '+${entry.key.question}">Question</h3>
+                    <a class="pull-right" style="color: #fff;" href="/ballotResult/1" data-th-href="@{/ballotResult/}+${entry.key.id}">analyse</a>
+                </div><!-- /.box-header -->
+                <div class="box-body">
+                    <div class="ballotAnswers">
+                        <div data-th-each="answer,status : ${entry.key.answers}" >
+                            <!-- Progress bars -->
+                            <div class="clearfix">
+                                <span class="pull-left" data-th-text="${answer}">Answer</span>
+                                <small class="pull-right" data-th-text="${entry.value[status.index]}">70%</small>
                             </div>
-                            <button type="submit" class="btn btn-default btn-success">Confirm</button>
-                    </div><!-- /.box-body -->
-                </div><!-- /.box -->
-            </form>
+                            <!--div class="progress xs">
+                                <div class="progress-bar progress-bar-purple" style="width: 90%;"></div>
+                            </div-->
+                        </div>
+                    </div>
+                </div><!-- /.box-body -->
+            </div><!-- /.box -->
 
         </section>
         <!-- /.content -->
