--- a/version_9/src/main/resources/templates/fragments/MasterPage.html
+++ b/version_9/src/main/resources/templates/fragments/MasterPage.html
@@ -42,7 +42,7 @@
                                             <a href="#">
                                                 <div class="pull-left">
                                                     <!-- User Image -->
-                                                    <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image"/>
+                                                    <img src="/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image"/>
                                                 </div>
                                                 <!-- Message title and timestamp -->
                                                 <h4>
@@ -126,14 +126,14 @@
                             <!-- Menu Toggle Button -->
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                 <!-- The user image in the navbar-->
-                                <img src="dist/img/user2-160x160.jpg" class="user-image" alt="User Image"/>
+                                <img src="/dist/img/user2-160x160.jpg" class="user-image" alt="User Image"/>
                                 <!-- hidden-xs hides the username on small devices so only the image appears. -->
                                 <span class="hidden-xs">Alexander Pierce</span>
                             </a>
                             <ul class="dropdown-menu">
                                 <!-- The user image in the menu -->
                                 <li class="user-header">
-                                    <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image"/>
+                                    <img src="/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image"/>
 
                                     <p>
                                         Alexander Pierce - Web Developer
@@ -186,7 +186,7 @@
                 <!-- Sidebar user panel (optional) -->
                 <div class="user-panel">
                     <div class="pull-left image">
-                        <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image"/>
+                        <img src="/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image"/>
                     </div>
                     <div class="pull-left info">
                         <p>Alexander Pierce</p>
@@ -241,11 +241,11 @@
 
     <div th:fragment="scripts">
         <!-- jQuery 2.1.4 -->
-        <script src="plugins/jQuery/jQuery-2.1.4.min.js"></script>
+        <script src="/plugins/jQuery/jQuery-2.1.4.min.js"></script>
         <!-- Bootstrap 3.3.5 -->
-        <script src="bootstrap/js/bootstrap.min.js"></script>
+        <script src="/bootstrap/js/bootstrap.min.js"></script>
         <!-- AdminLTE App -->
-        <script src="dist/js/app.min.js"></script>
+        <script src="/dist/js/app.min.js"></script>
 
         <!-- Optionally, you can add Slimscroll and FastClick plugins.
              Both of these plugins are recommended to enhance the
