--- a/version_9/src/main/resources/templates/ballotAnalysis.html
+++ b/version_9/src/main/resources/templates/ballotAnalysis.html
@@ -6,6 +6,9 @@ scratch. This page gets rid of all links and provides the needed markup only.
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
     <!--/*/ <th:block th:include="fragments/headerinc :: head"></th:block> /*/-->
+    <!-- jvectormap -->
+    <link rel="stylesheet" href="/plugins/jvectormap/jquery-jvectormap-1.2.2.css"/>
+
 </head>
 <!--
 BODY TAG OPTIONS:
@@ -67,9 +70,28 @@ desired effect
                 </div><!-- /.box-body -->
             </div><!-- /.box -->
 
-            <div class="chart">
-                <canvas id="pieChart" style="height:250px"></canvas>
-            </div>
+            <div class="box box-solid box-default" >
+                <div class="box-header">
+                    <h3 class="box-title" >Pie Chart</h3>
+                </div><!-- /.box-header -->
+                <div class="box-body">
+                    <div class="chart">
+                        <canvas id="pieChart" style="height:250px"></canvas>
+                    </div>
+                </div><!-- /.box-body -->
+            </div><!-- /.box -->
+
+            <div class="box box-solid box-default" >
+                <div class="box-header">
+                    <h3 class="box-title" >World Locations</h3>
+                </div><!-- /.box-header -->
+                <div class="box-body">
+                    <div class="pad">
+                        <!-- Map will be created here -->
+                        <div id="world-map-markers" style="height: 325px;" />
+                    </div>
+                </div><!-- /.box-body -->
+            </div><!-- /.box -->
 
         </section>
         <!-- /.content -->
@@ -87,8 +109,14 @@ desired effect
 
 <!-- ChartJS 1.0.1 -->
 <script src="/plugins/chartjs/Chart.min.js"></script>
-<!-- FastClick -->
-<script src="/plugins/fastclick/fastclick.js"></script>
+<!-- Sparkline -->
+<script src="/plugins/sparkline/jquery.sparkline.min.js"></script>
+<!-- jvectormap -->
+<script src="/plugins/jvectormap/jquery-jvectormap-1.2.2.min.js"></script>
+<script src="/plugins/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
+<!-- SlimScroll 1.3.0 -->
+<script src="/plugins/slimScroll/jquery.slimscroll.min.js"></script><!-- AdminLTE for demo purposes -->
+<script src="/dist/js/demo.js"></script>
 <!-- page script -->
 <script th:inline="javascript">
 /*<![CDATA[*/
@@ -133,7 +161,39 @@ desired effect
     // You can switch between pie and douhnut using the method below.
     pieChart.Pie(PieData, pieOptions);
 
+$('#world-map-markers').vectorMap({
+    map: 'world_mill_en',
+    normalizeFunction: 'polynomial',
+    hoverOpacity: 0.7,
+    hoverColor: false,
+    backgroundColor: 'transparent',
+    regionStyle: {
+      initial: {
+        fill: 'rgba(210, 214, 222, 1)',
+        "fill-opacity": 1,
+        stroke: 'none',
+        "stroke-width": 0,
+        "stroke-opacity": 1
+      },
+      hover: {
+        "fill-opacity": 0.7,
+        cursor: 'pointer'
+      },
+      selected: {
+        fill: 'yellow'
+      },
+      selectedHover: {}
+    },
+    markerStyle: {
+      initial: {
+        fill: '#00a65a',
+        stroke: '#111'
+      }
+    },
+    markers: /*[[${mapData}]]*/
   });
+});
+
 /*]]>*/
 </script>
 
