--- a/version_9/src/main/resources/templates/home.html
+++ b/version_9/src/main/resources/templates/home.html
@@ -91,7 +91,7 @@ desired effect
                             <p>Asked</p>
                         </div>
                         <div class="icon">
-                            <i class="ion ion-help"></i>
+                            <i class="ion ion-clipboard"></i>
                         </div>
                         <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
                     </div>
