Added legend to the chart

--- a/version_9/src/main/resources/static/css/tabella.css
+++ b/version_9/src/main/resources/static/css/tabella.css
@@ -9,3 +9,16 @@
 .text-white {
     color: #fff;
 }
+
+.pie-legend {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+@media (max-width: 991px) {
+  .pie-legend > li {
+    float: left;
+    margin-right: 10px;
+  }
+}
