--- a/version_9/src/main/resources/templates/ballotAnalysis.html
+++ b/version_9/src/main/resources/templates/ballotAnalysis.html
@@ -75,8 +75,17 @@ desired effect
                     <h3 class="box-title" >Pie Chart</h3>
                 </div><!-- /.box-header -->
                 <div class="box-body">
-                    <div class="chart">
-                        <canvas id="pieChart" style="height:250px"></canvas>
+                    <div class="row">
+                        <div class="col-md-9 col-sm-8">
+                            <div class="pad">
+                                <div class="chart">
+                                    <canvas id="pieChart" style="height:250px"></canvas>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-4">
+                            <div class="pad box-pane-right" id="legendDiv" style="min-height: 250px"/>
+                        </div>
                     </div>
                 </div><!-- /.box-body -->
             </div><!-- /.box -->
@@ -131,7 +140,7 @@ desired effect
     //-------------
     // Get context with jQuery - using jQuery's .get() method.
     var pieChartCanvas = $("#pieChart").get(0).getContext("2d");
-    var pieChart = new Chart(pieChartCanvas);
+    var chart = new Chart(pieChartCanvas);
     var PieData = /*[[${pieData}]]*/;
     var pieOptions = {
       //Boolean - Whether we should show a stroke on each segment
@@ -155,11 +164,14 @@ desired effect
       // Boolean - whether to maintain the starting aspect ratio or not when responsive, if set to false, will take up entire container
       maintainAspectRatio: true,
       //String - A legend template
-      legendTemplate : "<ul class=\"<%=name.toLowerCase()%>-legend\"><% for (var i=0; i<segments.length; i++){%><li><span style=\"background-color:<%=segments[i].fillColor%>\"></span><%if(segments[i].label){%><%=segments[i].label%><%}%></li><%}%></ul>"
+      legendTemplate : "<ul class=\"pie-legend clearfix\"><% for (var i=0; i<segments.length; i++){%><li><i class=\"fa fa-circle-o\" style=\"color:<%=segments[i].fillColor%>\"></i>&nbsp;<%=segments[i].label%></li><%}%></ul>"
     };
-    //Create pie or douhnut chart
     // You can switch between pie and douhnut using the method below.
-    pieChart.Pie(PieData, pieOptions);
+    var pieChart = chart.Pie(PieData, pieOptions);
+    // then you just need to generate the legend
+    var legend = pieChart.generateLegend();
+    // and append it to your page somewhere
+    $('#legendDiv').append(legend);
 
 $('#world-map-markers').vectorMap({
     map: 'world_mill_en',
