--- a/version_9/src/main/resources/templates/fragments/MasterPage.html
+++ b/version_9/src/main/resources/templates/fragments/MasterPage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head lang="en">
 
 </head>
@@ -128,7 +128,7 @@
                                 <!-- The user image in the navbar-->
                                 <img src="/dist/img/user2-160x160.jpg" class="user-image" alt="User Image"/>
                                 <!-- hidden-xs hides the username on small devices so only the image appears. -->
-                                <span class="hidden-xs">Alexander Pierce</span>
+                                <span class="hidden-xs" sec:authentication="principal.user.fullName">Who</span>
                             </a>
                             <ul class="dropdown-menu">
                                 <!-- The user image in the menu -->
@@ -136,7 +136,7 @@
                                     <img src="/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image"/>
 
                                     <p>
-                                        Alexander Pierce - Web Developer
+                                        <span sec:authentication="principal.user.fullName">Who</span> - Web Developer
                                         <small>Member since Nov. 2012</small>
                                     </p>
                                 </li>
@@ -189,7 +189,7 @@
                         <img src="/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image"/>
                     </div>
                     <div class="pull-left info">
-                        <p>Alexander Pierce</p>
+                        <p> <span sec:authentication="principal.user.fullName">Who</span></p>
                         <!-- Status -->
                         <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
                     </div>
